fix image distortion

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,7 @@ p.indent {
 
 .carousel-item>img {
   aspect-ratio: 16/9;
+  object-fit: fill;
 }
 
 img.index-title {
